[package]
name = "vcl-rs-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.vcl-rs]
path = ".."

[[bin]]
name = "tcp_dns_response"
path = "fuzz_targets/tcp_dns_response.rs"
test = false
doc = false
bench = false
